--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,14 +1,17 @@
 server.uri = http://localhost:2825/api/v1
 student.getAll = http://localhost:2825/api/v1/student/all
-student.byRec =http://localhost:2825/api/v1/student
+student.byRecBook = http://localhost:2825/api/v1/student?recordBook=
+
+//student.byRec = http://localhost:2825/api/v1/student/get?recordBook=
+
 student.save = http://localhost:2825/api/v1/student
 student.update = http://localhost:2825/api/v1/student
 student.del = http://localhost:2825/api/v1/student/
 
-assessmen.getAll = http://localhost:2825/api/v1/assessmen/all
+assessmens.getAll = http://localhost:2825/api/v1/assessmen/all
 
-assessmen.save = http://localhost:2825/api/v1/assessmen
-assessmen.update = http://localhost:2825/api/v1/assessmen
+assessmens.save = http://localhost:2825/api/v1/assessmen
+assessmens.update = http://localhost:2825/api/v1/assessmen
 assessmen.del = http://localhost:2825/api/v1/assessmen/
 
 group.getAll = http://localhost:2825/api/v1/group/all
@@ -27,5 +30,6 @@ special.save = http://localhost:2825/api/v1/special
 special.update = http://localhost:2825/api/v1/special
 special.del = http://localhost:2825/api/v1/special/
 
-
+user.check = http://localhost:2825/api/v1/user?username=
 user.save = http://localhost:2825/api/v1/user
+//user&password=12345
